--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
         <title>lobster</title>
     </head>
     <body>
-        Hello Lobster
+        <h1>Enter the URL</h1>
+        <input type="text" placeholder="Enter URL" onsubmit="handleURL" />
+        <script>
+            function handleURL(event) {
+                event.preventDefault();
+                const url = event.target.value;
+            }
+        </script>
     </body>
 </html>
